--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "autoprefixer": "^10.4.19",
     "phosphor-svelte": "^2.0.1",
-    "sass": "^1.77.8",
+    "postcss": "^8.4.38",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.4",
+    "tailwindcss": "^3.4.4",
     "tslib": "^2.6.3",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "@fontsource/ibm-plex-mono": "^5.0.13"
   }
 }
